package at.jku.werewolf.io.lobbymanagement;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.repository.CrudRepository;

public interface LobbyRepository extends JpaRepository<GameLobby, String> {
}
