@startuml

title __LOBBYMANAGEMENT's Class Diagram__\n


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.GameLobby {
            + gameRunning : boolean
            ~ discussiontime : int
            ~ lobbycode : String
            ~ votingtime : int
            ~ werewolves : int
            - players : List<Player>
            + GameLobby()
            + GameLobby()
            + countAllAlive()
            + getDiscussiontime()
            + getLobbycode()
            + getPlayers()
            + getVotingtime()
            + getWerewolves()
            + isGameRunning()
            + listWerewolves()
            + setDiscussiontime()
            + setGameRunning()
            + setLobbycode()
            + setPlayers()
            + setVotingtime()
            + setWerewolves()
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        enum GameRole {
          VILLAGER
          WEREWOLF
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.LobbyConfiguration {
            ~ discussiontime : int
            ~ votingtime : int
            ~ werewolves : int
            + LobbyConfiguration()
            + LobbyConfiguration()
            + getDiscussiontime()
            + getVotingtime()
            + getWerewolves()
            + setDiscussiontime()
            + setVotingtime()
            + setWerewolves()
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.LobbyController {
            - simpMessagingTemplate : SimpMessagingTemplate
            + LobbyController()
            + createLobby()
            + getLobbyInformation()
            + joinLobby()
            + startLobby()
            - runGame()
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        interface at.jku.werewolf.io.lobbymanagement.LobbyRepository {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.Player {
            ~ countVoteForPlayer : int
            ~ dead : boolean
            ~ gotVotes : int
            ~ isHost : boolean
            ~ name : String
            ~ path : String
            + Player()
            + Player()
            + addVote()
            + getName()
            + getPath()
            + getRole()
            + getVotes()
            + isDead()
            + isHost()
            + resetVotes()
            + setDead()
            + setHost()
            + setName()
            + setPath()
            + setRole()
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        interface at.jku.werewolf.io.lobbymanagement.PlayerRepository {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.ReturnFromCreateLobby {
            ~ lobbycode : String
            ~ userName : String
            + ReturnFromCreateLobby()
            + ReturnFromCreateLobby()
            + getLobbycode()
            + getUserName()
            + setLobbycode()
            + setUserName()
        }
      }
    }

  

  at.jku.werewolf.io.lobbymanagement.GameLobby .up.|> java.io.Serializable
  at.jku.werewolf.io.lobbymanagement.LobbyController o-- at.jku.werewolf.io.lobbymanagement.PlayerRepository : playerRepo
  at.jku.werewolf.io.lobbymanagement.LobbyController o-- at.jku.werewolf.io.lobbymanagement.LobbyRepository : repo
  at.jku.werewolf.io.lobbymanagement.Player .up.|> java.io.Serializable
  at.jku.werewolf.io.lobbymanagement.Player o-- at.jku.werewolf.io.lobbymanagement.GameRole : role


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
